Pack booleans in Event into a bitfield https://bugs.webkit.org/show_bug.cgi?id=188713

Reviewed by Daniel Bates.

Use bitfields for booleans in Event class.

* dom/Event.cpp:
(WebCore::Event::Event):
* dom/Event.h:
(WebCore::Event::IsComposed): Added.
(WebCore::Event): Packed booleans into a bitfield.


Canonical link: https://commits.webkit.org/203783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235009 268f45cc-cd09-0410-ab3c-d52691b4dbfc